# serializer version: 1
# name: TestTrafficTypeSnapshot.test_filter_bots_sql_query
  '''
  -- ClickHouse
  
  SELECT
      events.event AS event,
      replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS user_agent
  
  FROM
      events
  
  WHERE
      and(equals(events.team_id, 99999), equals(events.event, %(hogql_val_1)s), not(ifNull(notEquals(dictGetOrDefault(%(hogql_val_2)s, %(hogql_val_3)s, ifNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_4)s), ''), 'null'), '^"|"$', ''), %(hogql_val_5)s), %(hogql_val_6)s), %(hogql_val_7)s), 1)))
  ORDER BY
      user_agent ASC
  
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1, use_hive_partitioning=0
  
  -- HogQL
  
  SELECT
      event,
      properties.$user_agent AS user_agent
  
  FROM
      events
  
  WHERE
      and(equals(event, '$pageview'), not(notEquals(dictGetOrDefault('posthog_test.bot_definition_dict', 'traffic_type', ifNull(properties.$user_agent, ''), 'Regular'), 'Regular')))
  ORDER BY
      user_agent ASC
  
  LIMIT 100
  '''
# ---
# name: TestTrafficTypeSnapshot.test_get_bot_name
  '''
  -- ClickHouse
  
  SELECT
      dictGetOrDefault(%(hogql_val_0)s, %(hogql_val_1)s, ifNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), %(hogql_val_3)s), %(hogql_val_4)s) AS bot_name,
      count() AS count
  
  FROM
      events
  
  WHERE
      and(equals(events.team_id, 99999), equals(events.event, %(hogql_val_5)s))
  
  GROUP BY
      bot_name
  ORDER BY
      bot_name ASC
  
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1, use_hive_partitioning=0
  
  -- HogQL
  
  SELECT
      dictGetOrDefault('posthog_test.bot_definition_dict', 'name', ifNull(properties.$user_agent, ''), '') AS bot_name,
      count() AS count
  
  FROM
      events
  
  WHERE
      equals(event, '$pageview')
  
  GROUP BY
      bot_name
  ORDER BY
      bot_name ASC
  
  LIMIT 100
  '''
# ---
# name: TestTrafficTypeSnapshot.test_get_bot_type
  '''
  -- ClickHouse
  
  SELECT
      dictGetOrDefault(%(hogql_val_0)s, %(hogql_val_1)s, ifNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), %(hogql_val_3)s), %(hogql_val_4)s) AS bot_type,
      count() AS count
  
  FROM
      events
  
  WHERE
      and(equals(events.team_id, 99999), equals(events.event, %(hogql_val_5)s))
  
  GROUP BY
      bot_type
  ORDER BY
      bot_type ASC
  
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1, use_hive_partitioning=0
  
  -- HogQL
  
  SELECT
      dictGetOrDefault('posthog_test.bot_definition_dict', 'category', ifNull(properties.$user_agent, ''), '') AS bot_type,
      count() AS count
  
  FROM
      events
  
  WHERE
      equals(event, '$pageview')
  
  GROUP BY
      bot_type
  ORDER BY
      bot_type ASC
  
  LIMIT 100
  '''
# ---
# name: TestTrafficTypeSnapshot.test_get_traffic_category
  '''
  -- ClickHouse
  
  SELECT
      dictGetOrDefault(%(hogql_val_0)s, %(hogql_val_1)s, ifNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), %(hogql_val_3)s), %(hogql_val_4)s) AS category,
      count() AS count
  
  FROM
      events
  
  WHERE
      and(equals(events.team_id, 99999), equals(events.event, %(hogql_val_5)s))
  
  GROUP BY
      category
  ORDER BY
      category ASC
  
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1, use_hive_partitioning=0
  
  -- HogQL
  
  SELECT
      dictGetOrDefault('posthog_test.bot_definition_dict', 'category', ifNull(properties.$user_agent, ''), 'regular') AS category,
      count() AS count
  
  FROM
      events
  
  WHERE
      equals(event, '$pageview')
  
  GROUP BY
      category
  ORDER BY
      category ASC
  
  LIMIT 100
  '''
# ---
# name: TestTrafficTypeSnapshot.test_get_traffic_type
  '''
  -- ClickHouse
  
  SELECT
      dictGetOrDefault(%(hogql_val_0)s, %(hogql_val_1)s, ifNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), %(hogql_val_3)s), %(hogql_val_4)s) AS traffic_type,
      count() AS count
  
  FROM
      events
  
  WHERE
      and(equals(events.team_id, 99999), equals(events.event, %(hogql_val_5)s))
  
  GROUP BY
      traffic_type
  ORDER BY
      traffic_type ASC
  
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1, use_hive_partitioning=0
  
  -- HogQL
  
  SELECT
      dictGetOrDefault('posthog_test.bot_definition_dict', 'traffic_type', ifNull(properties.$user_agent, ''), 'Regular') AS traffic_type,
      count() AS count
  
  FROM
      events
  
  WHERE
      equals(event, '$pageview')
  
  GROUP BY
      traffic_type
  ORDER BY
      traffic_type ASC
  
  LIMIT 100
  '''
# ---
# name: TestTrafficTypeSnapshot.test_is_bot
  '''
  -- ClickHouse
  
  SELECT
      ifNull(notEquals(dictGetOrDefault(%(hogql_val_0)s, %(hogql_val_1)s, ifNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), %(hogql_val_3)s), %(hogql_val_4)s), %(hogql_val_5)s), 1) AS is_bot,
      count() AS count
  
  FROM
      events
  
  WHERE
      and(equals(events.team_id, 99999), equals(events.event, %(hogql_val_6)s))
  
  GROUP BY
      is_bot
  ORDER BY
      is_bot ASC
  
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1, use_hive_partitioning=0
  
  -- HogQL
  
  SELECT
      notEquals(dictGetOrDefault('posthog_test.bot_definition_dict', 'traffic_type', ifNull(properties.$user_agent, ''), 'Regular'), 'Regular') AS is_bot,
      count() AS count
  
  FROM
      events
  
  WHERE
      equals(event, '$pageview')
  
  GROUP BY
      is_bot
  ORDER BY
      is_bot ASC
  
  LIMIT 100
  '''
# ---
